Bug 1279247 - always release |l10nTagName| in nsMimeXmlEmitter.cpp. r=mkmelin